<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.bones03052.pathfinder.gui.SettlementViewer">

    <!-- TODO: Update blank fragment layout -->

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/Overview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:rowCount="2"
                        android:columnCount="1">

                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:columnCount="2"
                            android:rowCount="3"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight=".16"
                            android:layout_row="0"
                            android:layout_column="0">

                            <TextView
                                android:text="@string/nameSettlementViewText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/nameTextView"
                                android:layout_column="0"
                                android:layout_row="0"
                                android:layout_columnWeight=".5"
                                android:layout_rowWeight=".33"
                                android:textSize="18sp"
                                android:textAlignment="center"
                                android:labelFor="@+id/settlementNameEdit"
                                android:layout_gravity="center"
                                android:gravity="center" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"
                                android:text="Enter a Name"
                                android:id="@+id/settlementNameEdit"
                                android:layout_column="1"
                                android:layout_row="0"
                                android:layout_columnWeight=".5"
                                android:layout_rowWeight=".33"
                                android:textAlignment="viewStart"
                                android:textSize="14sp"
                                android:layout_gravity="center" />

                            <TextView
                                android:text="@string/alignSettlementViewText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/alignTextView"
                                android:layout_column="0"
                                android:layout_row="1"
                                android:layout_columnWeight=".5"
                                android:layout_rowWeight=".33"
                                android:textSize="18sp"
                                android:textAlignment="center"
                                android:labelFor="@+id/alignSpinner"
                                android:gravity="center"
                                android:layout_gravity="center" />

                            <Spinner
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/alignSpinner"
                                android:entries="@array/alignmentTypes"
                                android:layout_column="1"
                                android:layout_row="1"
                                android:layout_columnWeight=".5"
                                android:layout_rowWeight=".33"
                                android:textAlignment="center"
                                android:layout_gravity="center" />

                            <TextView
                                android:text="@string/govSettlementViewText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/govTextView"
                                android:layout_column="0"
                                android:layout_row="2"
                                android:layout_columnWeight=".5"
                                android:layout_rowWeight=".33"
                                android:textSize="18sp"
                                android:textAlignment="center"
                                android:labelFor="@+id/govSpinner"
                                android:gravity="center"
                                android:layout_gravity="center" />

                            <Spinner
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/govSpinner"
                                android:entries="@array/governmentTypes"
                                android:layout_column="1"
                                android:layout_row="2"
                                android:layout_columnWeight=".5"
                                android:layout_rowWeight=".33"
                                android:textAlignment="center"
                                android:layout_gravity="center" />

                        </GridLayout>

                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="1"
                            android:layout_columnWeight="1"
                            android:layout_rowWeight=".84"
                            android:columnCount="2"
                            android:rowCount="14">

                            <TextView
                                android:text="TextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView6" />
                        </GridLayout>

                    </GridLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Build_Grid"
                    android:tag="Build Grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</FrameLayout>
